# dynamic-graphs-data-structures-and-algorithms

./: CMakeLists.txt  README.md
src/structs/: graph.cpp  graph.hpp  types.hpp  vertex.cpp  vertex.hpp
tests/: CMakeLists.txt
tests/unit/: vertex_test.cpp
